--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "scripts": {
         "dev": "next dev --turbopack",
-        "build": "next build && next export",
-        "start": "next start",
+        "build": "next build",
+        "start": "npx serve@latest out",
         "lint": "next lint"
     },
     "dependencies": {
