--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "site-angelorodrigues",
+    "name": "site-angeloresplandes",
     "version": "0.1.0",
     "private": true,
     "scripts": {
